docs:Add P17681.md

--- a/programmers/P17681.md
+++ b/programmers/P17681.md
@@ -46,11 +46,11 @@
         n /= 2;
     }
 ````
-#### 위의 코드 말고도 String 객체의 내장함수에도 2진수로 바꾸는 함수가 있다. (2진수 외에도 8진수, 16진수도 있다.)
+#### 위의 코드 말고 2진수로 바꾸어 주는 함수가 있다. (2진수 외에도 8진수, 16진수도 있다.)
 ```` java
     String str = Integer.toBinaryString(int i);
 ````
-#### 이는 <u>비트연산자</u>도 함께 사용할 수 있다.
+#### 문제의 핵심인 비트연산자도 함께 사용할 수 있다.
 ```` java
     String str = Integer.toBinaryString(int i | int j);
 ````
@@ -97,7 +97,7 @@ class Solution {
 }
 ````
 
-### 2. String 객체의 내장함수 사용
+### 2. String 객체의 내장함수와 비트연산 사용
 ```` java
 public class P17681 {
     public String[] solution(int n, int[] arr1, int[] arr2) {
