docs:Add P17681.md

--- a/programmers/P17681.md
+++ b/programmers/P17681.md
@@ -74,7 +74,7 @@
 ### 1.
 
 ```` java
-public class p17681 {
+public class P17681 {
     public static String cal(int n,int len){
         String str = "";
         
