--- a/programmers/P17681.md
+++ b/programmers/P17681.md
@@ -1,15 +1,19 @@
 # [비밀지도 - P17681](https://school.programmers.co.kr/learn/courses/30/lessons/17681)
 
 ----
+
 ## 문제설명
-1. 지도는 한 변의 길이가 `n`인 정사각형 배열 형태로, 각 칸은 "공백"(" ") 또는 "벽"("#") 두 종류로 이루어져 있다.
-2. 전체 지도는 두 장의 지도를 겹쳐서 얻을 수 있다. 각각 "지도 1"과 "지도 2"라고 하자. 지도 1 또는 지도 2 중 어느 하나라도 벽인 부분은 전체 지도에서도 벽이다. 지도 1과 지도 2에서 모두 공백인 부분은 전체 지도에서도 공백이다.
+
+1. 지도는 한 변의 길이가`n`인 정사각형 배열 형태로, 각 칸은 "공백"(" ") 또는 "벽"("#") 두 종류로 이루어져 있다.
+2. 전체 지도는 두 장의 지도를 겹쳐서 얻을 수 있다. 각각 "지도 1"과 "지도 2"라고 하자. 지도 1 또는 지도 2 중 어느 하나라도 벽인 부분은 전체 지도에서도 벽이다. 지도 1과 지도 2에서 모두 공백인
+   부분은 전체 지도에서도 공백이다.
 3. "지도 1"과 "지도 2"는 각각 정수 배열로 암호화되어 있다.
-4. 암호화된 배열은 지도의 각 가로줄에서 벽 부분을 `1`, 공백 부분을 `0`으로 부호화했을 때 얻어지는 이진수에 해당하는 값의 배열이다.
+4. 암호화된 배열은 지도의 각 가로줄에서 벽 부분을`1`, 공백 부분을`0`으로 부호화했을 때 얻어지는 이진수에 해당하는 값의 배열이다.
 
 ![img.png](http://t1.kakaocdn.net/welcome2018/secret8.png)
 
 ### 입력 형식
+
 입력으로 지도의 한 변 크기 n 과 2개의 정수 배열 arr1, arr2가 들어온다.
 
 - 1 ≦ n ≦ 16
@@ -17,6 +21,7 @@
 - 정수 배열의 각 원소 x를 이진수로 변환했을 때의 길이는 n 이하이다. 즉, 0 ≦ x ≦ 2n - 1을 만족한다.
 
 ### 출력 형식
+
 원래의 비밀지도를 해독하여 '#', 공백으로 구성된 문자열 배열로 출력하라.
 
 ### 입출력 예
@@ -36,39 +41,50 @@
 | 출력   | ["######", "### #", "## ##", " #### ", " #####", "### # "] |
 
 ----
+
 ## 코드설명
-#### 우선 문제에 대한 이해가 필요하다. 이미지를 보면 10진수를 2진수로 바꾼 것이 암호라는 것을 알 수 있다. 
+
+#### 우선 문제에 대한 이해가 필요하다. 이미지를 보면 10진수를 2진수로 바꾼 것이 암호라는 것을 알 수 있다.
 
 #### 10진수를 2진수로 바꾸는 코드는 아래와 같다.
+
 ```` java
     wihle(n != 0) {
         str = n % 2 + str;
         n /= 2;
     }
 ````
+
 #### 위의 코드 말고 2진수로 바꾸어 주는 함수가 있다. (2진수 외에도 8진수, 16진수도 있다.)
+
 ```` java
     String str = Integer.toBinaryString(int i);
 ````
+
 #### 문제의 핵심인 비트연산자도 함께 사용할 수 있다.
+
 ```` java
     String str = Integer.toBinaryString(int i | int j);
 ````
 
+----
+
 ## 코드
+
 ### 1.
+
 ```` java
-class Solution {
+public class p17681 {
     public static String cal(int n,int len){
-        String str="";
+        String str = "";
         
         while(n != 0){
-            str = n%2 + str;
-            n/=2;
+            str = n % 2 + str;
+            n /= 2;
         }
         
         while(str.length() != len){
-            str = "0"+str;
+            str = "0" + str;
         }
         
         return str;
@@ -86,7 +102,7 @@ class Solution {
             str_y = cal(y,n);
             
             for(int j = 0;j<n;j++){
-                if(str_x.charAt(j) == '1' || str_y.charAt(j) == '1') str+="#";
+                if (str_x.charAt(j) == '1' || str_y.charAt(j) == '1') str+="#";
                 else str+=" ";
             }
             answer[i] = str;
@@ -98,6 +114,7 @@ class Solution {
 ````
 
 ### 2. String 객체의 내장함수와 비트연산 사용
+
 ```` java
 public class P17681 {
     public String[] solution(int n, int[] arr1, int[] arr2) {
@@ -119,6 +136,7 @@ public class P17681 {
 ````
 
 ----
+
 ## 문제핵심
 
 - 비트연산
