docs:Update P68935.md

--- a/programmers/P68935.md
+++ b/programmers/P68935.md
@@ -52,6 +52,17 @@
     }
 ````
 
+### 10진수를 3진수로 바꾸고 앞뒤 반전 후 10진법으로 표현한 것이다.
+
+```` java
+    while (n > 0) {
+        answer = (answer * 3) + (n % 3);
+        n /= 3;
+    }
+````
+
+## 코드
+
 ### 1.
 
 ```` java
@@ -67,15 +78,6 @@ public class P68935 {
         return answer;
     }
 }
-````
-
-10진수를 3진수로 바꾸고 앞뒤 반전 후 10진법으로 표현한 것이다.
-
-```` java
-    while (n > 0) {
-        answer = (answer * 3) + (n % 3);
-        n /= 3;
-    }
 ````
 
 ### 2.
@@ -94,3 +96,7 @@ public class P68935 {
     }
 }
 ````
+
+### 문제핵심
+
+- n진법 변환
